style: change the text color of nav

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       class="z-30 absolute left-1/2 top-0 -translate-x-1/2 w-full max-w-[1360px] h-[84px]"
     >
       <!-- ==================== navbar ==================== -->
-      <nav class="z-30 flex justify-between items-center gap-10 p-5">
+      <nav class="z-30 flex justify-between items-center gap-10 p-5 text-[#12f7ff]">
         <!-- ===== Nav Logo ===== -->
         <div>
-          <a class="text-4xl font-bold text-[#12f7ff]" href="#">Logo</a>
+          <a class="text-4xl font-bold" href="#">Logo</a>
         </div>
 
         <!-- ===== Nav Menu Btn ===== -->
