style: remove transition of man

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="relative left-0 z-10 h-screen w-full overflow-hidden">
             <img
               id="man"
-              class="absolute -right-80 z-10 h-full object-fill pointer-events-none -top-7 transition-all duration-300"
+              class="absolute -right-80 z-10 h-full object-fill pointer-events-none -top-7"
               src="./src/assets/image/About-Images/man.png"
               alt="man"
             />
