remove hover in mobile

--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
           id="nav-list"
           class="hidden absolute backdrop-blur top-16 left-0 right-0 p-8 sm:p-0 border-b sm:w-min sm:static sm:bg-transparent sm:border-none sm:block"
         >
-          <ul
-            class="flex flex-col gap-8 justify-between items-center sm:flex-row sm:gap-6"
-          >
+          <ul class="flex flex-col gap-8 justify-between items-center sm:flex-row sm:gap-6">
             <li>
               <a
                 class="font-medium text-base block w-40 sm:w-auto text-center px-4 py-2 border-2 border-[#12f7ff] rounded-full transition-all duration-300 bg-[#12f7ff] text-[#1d002c] shadow-blur"
@@ -170,15 +168,13 @@
       <!-- ==================== about ==================== -->
       <section class="tab relative w-full h-screen">
         <!-- info box -->
-        <div
-          class="z-20 w-2/3 pl-5 md:pl-10 absolute -top-8 left-0 bg-[#1d002c]"
-        >
+        <div class="z-20 w-2/3 pl-5 md:pl-10 absolute -top-8 left-0 bg-[#1d002c]">
           <h2 class="animation-show font-bold text-3xl">About Us</h2>
 
           <p class="animation-show text-base text-justify my-4 line-clamp-2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
-            quia natus facilis eligendi similique reiciendis, suscipit quam!
-            Exercitationem dignissimos ipsa assumenda ullam accusamus sit.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quia natus facilis
+            eligendi similique reiciendis, suscipit quam! Exercitationem dignissimos ipsa assumenda
+            ullam accusamus sit.
           </p>
 
           <div class="animation-show">
@@ -263,8 +259,8 @@
                 <p class="font-bold text-xl text-[#04cf37]">$120</p>
               </div>
               <p class="text-justify font-normal text-base my-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-                delectus aperiam sapiente.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus delectus aperiam
+                sapiente.
               </p>
               <a
                 class="font-medium text-base block w-28 text-center px-4 py-2 border-2 border-[#12f7ff] rounded-full transition-all duration-300 bg-[#12f7ff] text-[#1d002c] hover:bg-[#1d002c] hover:text-[#12f7ff] hover:shadow-blur my-7 mx-auto"
@@ -290,8 +286,8 @@
                 <p class="font-bold text-xl text-[#04cf37]">$120</p>
               </div>
               <p class="text-justify font-normal text-base my-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-                delectus aperiam sapiente.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus delectus aperiam
+                sapiente.
               </p>
               <a
                 class="font-medium text-base block w-28 text-center px-4 py-2 border-2 border-[#12f7ff] rounded-full transition-all duration-300 bg-[#12f7ff] text-[#1d002c] hover:bg-[#1d002c] hover:text-[#12f7ff] hover:shadow-blur my-7 mx-auto"
@@ -317,8 +313,8 @@
                 <p class="font-bold text-xl text-[#04cf37]">$120</p>
               </div>
               <p class="text-justify font-normal text-base my-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-                delectus aperiam sapiente.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus delectus aperiam
+                sapiente.
               </p>
               <a
                 class="font-medium text-base block w-28 text-center px-4 py-2 border-2 border-[#12f7ff] rounded-full transition-all duration-300 bg-[#12f7ff] text-[#1d002c] hover:bg-[#1d002c] hover:text-[#12f7ff] hover:shadow-blur my-7 mx-auto"
@@ -344,8 +340,8 @@
                 <p class="font-bold text-xl text-[#04cf37]">$120</p>
               </div>
               <p class="text-justify font-normal text-base my-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-                delectus aperiam sapiente.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus delectus aperiam
+                sapiente.
               </p>
               <a
                 class="font-medium text-base block w-28 text-center px-4 py-2 border-2 border-[#12f7ff] rounded-full transition-all duration-300 bg-[#12f7ff] text-[#1d002c] hover:bg-[#1d002c] hover:text-[#12f7ff] hover:shadow-blur my-7 mx-auto"
@@ -359,14 +355,24 @@
       </section>
 
       <!-- ==================== scroll-up btn ==================== -->
-       <section id="progress" class="hidden fixed text-[#1d002c] z-50 right-2 bottom-4 p-2 rounded-full cursor-pointer">
+      <section
+        id="progress"
+        class="hidden fixed text-[#1d002c] z-50 right-2 bottom-4 p-2 rounded-full cursor-pointer"
+      >
         <div id="progress-value" class="bg-white rounded-full p-2">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="size-6">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="2.5"
+            stroke="currentColor"
+            class="size-6"
+          >
             <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 18.75 7.5-7.5 7.5 7.5" />
             <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 7.5-7.5 7.5 7.5" />
-          </svg>          
+          </svg>
         </div>
-       </section>
+      </section>
     </main>
     <footer>
       <!-- ==================== footer ==================== -->
